[package]
name = "nanolog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nanolog-rs-common = {path = "nanolog-rs-common"}
nanolog-rs-proc-macro = {path = "nanolog-rs-proc-macro"}

[build-dependencies]
syn = {version = "2.0.100", features = ["extra-traits", "full", "visit"]}
proc-macro2 = {version = "1.0.94", features=["span-locations"]}
nanolog-rs-common = {path = "nanolog-rs-common"}
quote = {version = "1.0.40"}
