[package]
name = "nanolog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
affinity = "0.1.2"
nanolog-rs-common = {path = "nanolog-rs-common"}
nanolog-rs-proc-macro = {path = "nanolog-rs-proc-macro"}

[build-dependencies]
syn = {version = "2.0.100", features = ["extra-traits", "full", "visit"]}
proc-macro2 = {version = "1.0.94", features=["span-locations"]}
nanolog-rs-common = {path = "nanolog-rs-common"}
quote = {version = "1.0.40"}

[profile.release]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
